<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/textViewTitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/title_form_reg_users"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textStyle="italic" />

    <TextView
        android:id="@+id/textViewNombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textViewTitulo"
        android:layout_marginTop="24dp"
        android:text="@string/nombre"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/editTextNombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textViewNombre"
        android:layout_toRightOf="@+id/textViewNombre"
        android:ems="10"
        android:inputType="textPersonName" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/textViewApellido"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textViewNombre"
        android:layout_marginTop="24dp"
        android:text="@string/apellidos"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/editTextApellido"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textViewApellido"
        android:layout_toRightOf="@+id/textViewNombre"
        android:ems="10"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/textViewTelefono"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textViewApellido"
        android:layout_marginTop="24dp"
        android:text="@string/tel"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/editTextTelefono"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textViewTelefono"
        android:layout_toRightOf="@+id/textViewNombre"
        android:ems="10"
        android:inputType="phone" />

    <TextView
        android:id="@+id/textViewEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textViewTelefono"
        android:layout_marginTop="24dp"
        android:text="@string/email"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textViewEmail"
        android:layout_toRightOf="@+id/textViewNombre"
        android:ems="10"
        android:inputType="textEmailAddress" />

    <Button
        android:id="@+id/buttonLimpiar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/buttonEnviar"
        android:layout_alignBottom="@+id/buttonEnviar"
        android:layout_marginLeft="16dp"
        android:layout_toRightOf="@+id/buttonEnviar"
        android:text="@string/limpiar" />

    <Button
        android:id="@+id/buttonEnviar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTextEmail"
        android:layout_marginTop="28dp"
        android:layout_toRightOf="@+id/textViewTelefono"
        android:text="@string/enviar" />

    <TextView
        android:id="@+id/textViewEmailEscrito"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textViewTelEscrito"
        android:layout_alignParentBottom="true"
        android:text="@string/email"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/textViewTelEscrito"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textViewEmailEscrito"
        android:layout_alignLeft="@+id/textViewApeEscrito"
        android:text="@string/tel"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/textViewApeEscrito"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textViewTelEscrito"
        android:layout_alignLeft="@+id/textViewNomEscrito"
        android:text="@string/apellidos"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/textViewNomEscrito"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textViewApeEscrito"
        android:layout_alignLeft="@+id/textViewEmail"
        android:text="@string/nombre"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/textViewResultado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textViewNomEscrito"
        android:layout_centerHorizontal="true"
        android:text="@string/resultado"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textStyle="italic" />

</RelativeLayout>